--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lightweight-git-blame",
-  "displayName": "lightweight-git-blame",
-  "description": "lightweight inllne git blame overlay",
+  "name": "git-blame-vsc",
+  "displayName": "git-blame-vsc",
+  "description": "lightweight git blame overlay",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.109.0"
@@ -9,27 +9,27 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./dist/extension.js",
+  "activationEvents": [
+    "onStartupFinished"
+  ],
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "lightweight-git-blame.helloWorld",
+        "command": "git-blame-vsc.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "git-blame-vsc.clearOverlay",
+        "title": "Clear Line Overlay"
       }
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "npm run check-types && npm run lint && node esbuild.js",
-    "watch": "npm-run-all -p watch:*",
-    "watch:esbuild": "node esbuild.js --watch",
-    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
-    "check-types": "tsc --noEmit",
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
     "test": "vscode-test"
   },
@@ -39,8 +39,6 @@
     "@types/node": "22.x",
     "typescript-eslint": "^8.54.0",
     "eslint": "^9.39.2",
-    "esbuild": "^0.27.2",
-    "npm-run-all": "^4.1.5",
     "typescript": "^5.9.3",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2"
