--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
                 "sst-dev.opencode",
                 "GitHub.copilot-chat",
                 "GitHub.vscode-pull-request-github",
-                "google.geminicodeassist"
+                "google.geminicodeassist",
+                "ms-vscode.extension-test-runner"
             ]
         }
     }
