--- a/package.json
+++ b/package.json
@@ -29,29 +29,21 @@
       "properties": {
         "gitBlameOverlay.backgroundColor": {
           "type": "string",
-          "default": "#FFD700",
-          "description": "Background color of the overlay text"
+          "description": "Background color of the overlay text (hex color, e.g., '#FFD700'). If not set, matches editor background."
         },
         "gitBlameOverlay.textColor": {
           "type": "string",
-          "default": "#000000",
-          "description": "Text color of the overlay content"
+          "description": "Text color of the overlay content (hex color, e.g., '#000000'). If not set, matches editor foreground."
         },
         "gitBlameOverlay.borderColor": {
           "type": "string",
-          "default": "#FFA500",
-          "description": "Border color of the overlay"
+          "description": "Border color of the overlay (hex color, e.g., '#FFA500'). If not set, uses editor accent color."
         },
         "gitBlameOverlay.fontWeight": {
           "type": "string",
           "enum": ["normal", "bold", "lighter", "900"],
           "default": "bold",
           "description": "Font weight for overlay text"
-        },
-        "gitBlameOverlay.fontSize": {
-          "type": "string",
-          "default": "0.85em",
-          "description": "Font size for overlay text (e.g., '0.85em', '12px')"
         },
         "gitBlameOverlay.marginLeft": {
           "type": "string",
