feat: add opacity and italic font style to overlay
- Add fontStyle setting to support italic text rendering (default: italic)
- Add opacity setting for text transparency (default: 0.6, range 0-1)
- Implement opacity as hex alpha channel for custom colors
- Update resolveColor function to handle opacity conversion
- New settings:
  - gitBlameOverlay.fontStyle: 'normal' or 'italic'
  - gitBlameOverlay.opacity: 0-1 (lower = more transparent, less noticeable)

This makes the overlay more subtle and less intrusive, especially with italic + semi-transparent text

--- a/package.json
+++ b/package.json
@@ -45,6 +45,19 @@
           "default": "bold",
           "description": "Font weight for overlay text"
         },
+        "gitBlameOverlay.fontStyle": {
+          "type": "string",
+          "enum": ["normal", "italic"],
+          "default": "italic",
+          "description": "Font style for overlay text. Use 'italic' for subtle styling."
+        },
+        "gitBlameOverlay.opacity": {
+          "type": "number",
+          "minimum": 0,
+          "maximum": 1,
+          "default": 0.6,
+          "description": "Text opacity (0 = transparent, 1 = fully opaque). Lower values make text less prominent."
+        },
         "gitBlameOverlay.marginLeft": {
           "type": "string",
           "default": "1rem",
