feat: add configurable output pattern and message length settings
- Add gitBlameOverlay.outputPattern setting for custom blame formatting
- Add gitBlameOverlay.maxMessageLength setting (default: 24 characters)
- Support pattern variables: <hash>, <author>, <authorShort>, <authorEmail>, <date>, <message>
- Change default pattern to '[<hash>] <author> (<date>): <message>'
- Update package.json with new settings documentation

--- a/package.json
+++ b/package.json
@@ -62,6 +62,17 @@
           "type": "string",
           "default": "1rem",
           "description": "Left margin spacing before overlay text"
+        },
+        "gitBlameOverlay.outputPattern": {
+          "type": "string",
+          "default": "[<hash>] <author> (<date>): <message>",
+          "description": "Pattern for the blame output string. Available variables: <hash>, <author>, <authorShort>, <authorEmail>, <date>, <message>. Examples: '[<hash>] <author> (<date>): <message>' or '<authorShort>: <message>' or '<author> <authorEmail>'"
+        },
+        "gitBlameOverlay.maxMessageLength": {
+          "type": "number",
+          "minimum": 1,
+          "default": 24,
+          "description": "Maximum length of the commit message in the output (characters)"
         }
       }
     }
