feat: add extension logo and improve marketplace metadata
- Add SVG logo (media/icon.svg) for VS Code marketplace display
- Update category from 'Other' to 'SCM Providers' (more appropriate)
- Add keywords: git, blame, overlay, history, annotation, vcs
- Reference icon in package.json for marketplace visibility

--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
   },
   "publisher": "prulloac",
   "version": "0.0.1",
+  "icon": "media/icon.svg",
+  "keywords": [
+    "git",
+    "blame",
+    "overlay",
+    "history",
+    "annotation",
+    "vcs"
+  ],
   "engines": {
     "vscode": "^1.109.0"
   },
   "categories": [
-    "Other"
+    "SCM Providers"
   ],
   "activationEvents": [
     "onStartupFinished"
