feat: add PNG icon and bump version to 0.0.2
- Add rasterized PNG version of cat icon for better marketplace display
- Update package.json to reference icon.png instead of SVG
- Bump version to 0.0.2 for new icon release
- Add MIT license field to package metadata

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "url": "https://github.com/prulloac/git-blame-vsc.git"
   },
   "publisher": "prulloac",
-  "version": "0.0.1",
-  "icon": "media/icon.svg",
+  "version": "0.0.2",
+  "icon": "media/icon.png",
+  "license": "MIT",
   "keywords": [
     "git",
     "blame",
