--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
     "name": "Git Blame Lightweight Plugin Workspace",
     "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
+    "remoteEnv": {
+        "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}"
+    },
     "features": {
         "ghcr.io/devcontainers/features/github-cli:1": {},
         "ghcr.io/stu-bell/devcontainer-features/open-code:0": {},
