--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
                 "GitHub.copilot-chat",
                 "GitHub.vscode-pull-request-github",
                 "google.geminicodeassist",
-                "ms-vscode.extension-test-runner"
+                "ms-vscode.extension-test-runner",
+                "github.vscode-github-actions"
             ]
         }
     }
