--- a/.github/workflows/feature-summary-generator.yml
+++ b/.github/workflows/feature-summary-generator.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install OpenCode CLI
         run: |
-          npm install -g @opencode/cli
+          npm install -g opencode-ai
           
       - name: Get issue details
         id: issue
