--- a/.github/workflows/feature-summary-generator.yml
+++ b/.github/workflows/feature-summary-generator.yml
@@ -44,32 +44,97 @@ jobs:
           script: |
             const issue = context.payload.issue;
             
-            // Extract feature name from issue title
-            let featureName = issue.title
+            // Extract clean title for processing
+            let cleanTitle = issue.title
               .replace(/^\[Feature\]:?\s*/i, '')
-              .replace(/^\[Enhancement\]:?\s*/i, '')
-              .toLowerCase()
-              .replace(/[^a-z0-9\s-]/g, '')
-              .replace(/\s+/g, '-')
-              .substring(0, 50);
+              .replace(/^\[Enhancement\]:?\s*/i, '');
             
-            core.setOutput('feature_name', featureName);
             core.setOutput('issue_number', issue.number);
             core.setOutput('issue_title', issue.title);
+            core.setOutput('clean_title', cleanTitle);
             core.setOutput('issue_body', issue.body || '');
             
             return {
-              featureName,
               issueNumber: issue.number,
               issueTitle: issue.title,
+              cleanTitle: cleanTitle,
               issueBody: issue.body || ''
             };
 
+      - name: Create OpenCode prompt for feature name
+        run: |
+          cat > /tmp/feature_name_prompt.txt << 'PROMPT_EOF'
+          Generate a concise, kebab-case feature name (2-4 words max, lowercase, hyphen-separated) for the following feature:
+
+          Title: ${{ steps.issue.outputs.clean_title }}
+          
+          Description:
+          ${{ steps.issue.outputs.issue_body }}
+
+          Requirements:
+          - Maximum 4 words
+          - Use kebab-case (lowercase with hyphens)
+          - Be descriptive but concise
+          - Use common technical terms
+          - No special characters except hyphens
+          - Maximum 40 characters total
+          
+          Examples of good feature names:
+          - "inline-blame-display"
+          - "hover-commit-info"
+          - "keyboard-shortcuts"
+          - "status-bar-integration"
+          
+          Respond with ONLY the feature name, nothing else. No quotes, no explanation.
+          PROMPT_EOF
+
+      - name: Generate concise feature name with OpenCode
+        id: feature_name_generation
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Try to generate feature name with OpenCode
+          echo "Attempting to generate feature name with OpenCode..."
+          
+          FEATURE_NAME=$(opencode run --file /tmp/feature_name_prompt.txt 2>&1 | tail -1 | tr -d '"' | tr -d "'" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]//g' | cut -c1-40)
+          
+          # Validate the generated name
+          if [ -z "$FEATURE_NAME" ] || [ ${#FEATURE_NAME} -lt 3 ]; then
+            echo "OpenCode generation failed or produced invalid name, using fallback..."
+            FEATURE_NAME="${{ steps.issue.outputs.clean_title }}"
+            FEATURE_NAME=$(echo "$FEATURE_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9 ]//g' | tr ' ' '-' | cut -c1-40)
+          fi
+          
+          echo "Generated feature name: $FEATURE_NAME"
+          echo "feature_name=$FEATURE_NAME" >> $GITHUB_OUTPUT
+        continue-on-error: true
+
+      - name: Fallback feature name generation
+        id: feature_name_fallback
+        if: steps.feature_name_generation.outcome == 'failure' || steps.feature_name_generation.outputs.feature_name == ''
+        run: |
+          echo "Using fallback feature name generation..."
+          FEATURE_NAME="${{ steps.issue.outputs.clean_title }}"
+          FEATURE_NAME=$(echo "$FEATURE_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9 ]//g' | tr ' ' '-' | sed 's/--*/-/g' | cut -c1-40)
+          echo "Fallback feature name: $FEATURE_NAME"
+          echo "feature_name=$FEATURE_NAME" >> $GITHUB_OUTPUT
+
+      - name: Set final feature name
+        id: final_feature_name
+        run: |
+          if [ -n "${{ steps.feature_name_generation.outputs.feature_name }}" ]; then
+            FEATURE_NAME="${{ steps.feature_name_generation.outputs.feature_name }}"
+          else
+            FEATURE_NAME="${{ steps.feature_name_fallback.outputs.feature_name }}"
+          fi
+          echo "Final feature name: $FEATURE_NAME"
+          echo "feature_name=$FEATURE_NAME" >> $GITHUB_OUTPUT
+
       - name: Create feature directory
         run: |
-          mkdir -p "docs/features/${{ steps.issue.outputs.feature_name }}"
+          mkdir -p "docs/features/${{ steps.final_feature_name.outputs.feature_name }}"
 
-      - name: Create OpenCode prompt file
+      - name: Create OpenCode prompt file for feature summary
         run: |
           cat > /tmp/opencode_prompt.txt << 'PROMPT_EOF'
           You are an expert software architect tasked with creating a comprehensive feature summary.
@@ -77,7 +142,7 @@ jobs:
           CRITICAL INSTRUCTIONS:
           1. Load the feature-summary skill from .agents/skills/feature-summary
           2. Use the skill to create a detailed feature summary document
-          3. The output MUST be saved to: docs/features/${{ steps.issue.outputs.feature_name }}/summary.md
+          3. The output MUST be saved to: docs/features/${{ steps.final_feature_name.outputs.feature_name }}/summary.md
           
           FEATURE INFORMATION:
           
@@ -97,17 +162,15 @@ jobs:
         run: |
           # Run OpenCode with the feature-summary skill
           opencode run \
-            --prompt "$(cat /tmp/opencode_prompt.txt)" \
-            --skill feature-summary \
-            --output "docs/features/${{ steps.issue.outputs.feature_name }}/summary.md" \
-            --context "issue=#${{ steps.issue.outputs.issue_number }}" \
-            --auto-approve
+            --file "/tmp/opencode_prompt.txt" \
+            --file ".agents/skills/feature-summary/SKILL.md" \
+            "Create a feature summary document for the given feature request. Save the output to docs/features/${{ steps.final_feature_name.outputs.feature_name }}/summary.md"
         continue-on-error: true
 
       - name: Alternative - Create feature summary manually
         if: failure()
         run: |
-          cat > "docs/features/${{ steps.issue.outputs.feature_name }}/summary.md" << 'EOF'
+          cat > "docs/features/${{ steps.final_feature_name.outputs.feature_name }}/summary.md" << 'EOF'
           # Feature Summary: ${{ steps.issue.outputs.issue_title }}
           
           > **Source:** GitHub Issue [#${{ steps.issue.outputs.issue_number }}](https://github.com/${{ github.repository }}/issues/${{ steps.issue.outputs.issue_number }})
@@ -137,7 +200,7 @@ jobs:
       - name: Check if files were created
         id: check_files
         run: |
-          if [ -f "docs/features/${{ steps.issue.outputs.feature_name }}/summary.md" ]; then
+          if [ -f "docs/features/${{ steps.final_feature_name.outputs.feature_name }}/summary.md" ]; then
             echo "summary_created=true" >> $GITHUB_OUTPUT
             echo "✅ Feature summary created"
           else
@@ -155,7 +218,7 @@ jobs:
       - name: Commit and push feature summary
         if: steps.check_files.outputs.summary_created == 'true'
         run: |
-          git add "docs/features/${{ steps.issue.outputs.feature_name }}/"
+          git add "docs/features/${{ steps.final_feature_name.outputs.feature_name }}/"
           git commit -m "feat: add feature summary for issue #${{ steps.issue.outputs.issue_number }}
 
           Generated feature summary for: ${{ steps.issue.outputs.issue_title }}
@@ -171,7 +234,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const featureName = '${{ steps.issue.outputs.feature_name }}';
+            const featureName = '${{ steps.final_feature_name.outputs.feature_name }}';
             const issueNumber = '${{ steps.issue.outputs.issue_number }}';
             const issueTitle = '${{ steps.issue.outputs.issue_title }}';
             
@@ -187,6 +250,7 @@ jobs:
             
             ### Summary
             - **Feature:** ${issueTitle}
+            - **Feature Name:** \`${featureName}\`
             - **Location:** \`docs/features/${featureName}/summary.md\`
             - **Source Issue:** #${issueNumber}
             
@@ -223,6 +287,7 @@ jobs:
             
             A pull request has been created with the feature summary document: #${pr.number}
             
+            📄 **Feature Name:** \`${featureName}\`
             📄 **Document Location:** \`docs/features/${featureName}/summary.md\`
             
             ### Next Steps:
@@ -239,6 +304,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const featureName = '${{ steps.final_feature_name.outputs.feature_name }}';
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -258,7 +324,7 @@ jobs:
                \`\`\`
             
             3. Or manually create the document at:
-               \`docs/features/${{ steps.issue.outputs.feature_name }}/summary.md\`
+               \`docs/features/${featureName}/summary.md\`
             
             Check the [workflow run logs](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) for details.`
             });
