ci(workflows): ignore specific paths in CI triggers and update feature name generation prompt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,28 @@ name: CI
 on:
   push:
     branches: [main, master]
+    paths-ignore:
+      - '.github/**'
+      - '.agents/**'
+      - '.opencode/**'
+      - 'docs/**'
+      - '**.md'
+      - 'LICENSE'
+      - '.gitignore'
+      - '.editorconfig'
+      - '.vscode/**'
   pull_request:
     branches: [main, master]
+    paths-ignore:
+      - '.github/**'
+      - '.agents/**'
+      - '.opencode/**'
+      - 'docs/**'
+      - '**.md'
+      - 'LICENSE'
+      - '.gitignore'
+      - '.editorconfig'
+      - '.vscode/**'
 
 permissions: read-all
 
