--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
         "ghcr.io/devcontainers/features/github-cli:1": {},
         "ghcr.io/stu-bell/devcontainer-features/open-code:0": {},
         "ghcr.io/stu-bell/devcontainer-features/gemini-cli:0": {},
+        "ghcr.io/devcontainers/features/copilot-cli:1": {},
         "ghcr.io/devcontainers-extra/features/npm-package:1": {
             "package": "skills"
         },
