ci(workflow): simplify feature summary generator workflow
- Replace complex logic with basic Copilot CLI execution
- Simplify steps to use actions/checkout and npm install
- This appears to be a simplification for testing or debugging purposes

--- a/.github/workflows/feature-summary-generator.yml
+++ b/.github/workflows/feature-summary-generator.yml
@@ -21,356 +21,16 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: 'npm'
-
-      - name: Install GitHub Copilot CLI
-        run: |
-          npm install -g @github/copilot
-
-      - name: Authenticate with GitHub Copilot
-        run: |
-          # The Copilot CLI requires the GITHUB_TOKEN to be set in the environment
-          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
-          
-          # Also set GH_TOKEN as a fallback
-          echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
-          
-      - name: Get issue details
-        id: issue
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const issue = context.payload.issue;
+      - uses: actions/checkout@v4
             
-            // Extract clean title for processing
-            let cleanTitle = issue.title
-              .replace(/^\[Feature\]:?\s*/i, '')
-              .replace(/^\[Enhancement\]:?\s*/i, '');
-            
-            core.setOutput('issue_number', issue.number);
-            core.setOutput('issue_title', issue.title);
-            core.setOutput('clean_title', cleanTitle);
-            core.setOutput('issue_body', issue.body || '');
-            
-            return {
-              issueNumber: issue.number,
-              issueTitle: issue.title,
-              cleanTitle: cleanTitle,
-              issueBody: issue.body || ''
-            };
+      - name: Install Copilot CLI
+        run: npm install -g @github/copilot
 
-      - name: Create Copilot prompt for feature name
+      - name: Execute Prompt
         env:
-          CLEAN_TITLE: ${{ steps.issue.outputs.clean_title }}
-          ISSUE_BODY: ${{ steps.issue.outputs.issue_body }}
+          # The CLI looks for this token to authenticate headlessly
+          COPILOT_GITHUB_TOKEN: ${{ secrets.COPILOT_GITHUB_TOKEN }}
         run: |
-          cat > /tmp/feature_name_prompt.txt << 'PROMPT_EOF'
-          Generate a concise, kebab-case feature name (2-4 words max, lowercase, hyphen-separated) for the following feature:
-          
-          Title: ${CLEAN_TITLE}
-          
-          Description:
-          ${ISSUE_BODY}
-          
-          Requirements:
-          - Maximum 4 words
-          - Use kebab-case (lowercase with hyphens)
-          - Be descriptive but concise
-          - Use common technical terms
-          - No special characters except hyphens
-          - Maximum 40 characters total
-          
-          Examples of good feature names:
-          - "inline-blame-display"
-          - "hover-commit-info"
-          - "keyboard-shortcuts"
-          - "status-bar-integration"
-          
-          Respond with ONLY the feature name, nothing else. No quotes, no explanation.
-          PROMPT_EOF
-          
-          # Substitute environment variables into the file
-          envsubst < /tmp/feature_name_prompt.txt > /tmp/feature_name_prompt_final.txt
-          mv /tmp/feature_name_prompt_final.txt /tmp/feature_name_prompt.txt
-          
-          # Debug: Verify file was created
-          echo "=== Feature name prompt file created ==="
-          ls -la /tmp/feature_name_prompt.txt
-          echo "=== Content preview (first 20 lines) ==="
-          head -n 20 /tmp/feature_name_prompt.txt
-
-      - name: Generate concise feature name with Copilot
-        id: feature_name_generation
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Check if Copilot is available
-          if ! command -v copilot &> /dev/null; then
-            echo "Copilot CLI not found, skipping AI generation"
-            exit 1
-          fi
-          
-          # Verify prompt file exists
-          if [ ! -f /tmp/feature_name_prompt.txt ]; then
-            echo "Prompt file not found at /tmp/feature_name_prompt.txt"
-            exit 1
-          fi
-          
-          # Try to generate feature name with Copilot
-          echo "Attempting to generate feature name with Copilot..."
-          
-          FEATURE_NAME=$(copilot -p "$(cat /tmp/feature_name_prompt.txt)" --silent --allow-all-tools 2>&1 | tail -1 | tr -d '"' | tr -d "'" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]//g' | cut -c1-40)
-          
-          # Validate the generated name
-          if [ -z "$FEATURE_NAME" ] || [ ${#FEATURE_NAME} -lt 3 ]; then
-            echo "Copilot generation failed or produced invalid name, using fallback..."
-            FEATURE_NAME="${{ steps.issue.outputs.clean_title }}"
-            FEATURE_NAME=$(echo "$FEATURE_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9 ]//g' | tr ' ' '-' | cut -c1-40)
-          fi
-          
-          echo "Generated feature name: $FEATURE_NAME"
-          echo "feature_name=$FEATURE_NAME" >> $GITHUB_OUTPUT
-        continue-on-error: true
-
-      - name: Fallback feature name generation
-        id: feature_name_fallback
-        if: steps.feature_name_generation.outcome == 'failure' || steps.feature_name_generation.outputs.feature_name == ''
-        run: |
-          echo "Using fallback feature name generation..."
-          FEATURE_NAME="${{ steps.issue.outputs.clean_title }}"
-          FEATURE_NAME=$(echo "$FEATURE_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9 ]//g' | tr ' ' '-' | sed 's/--*/-/g' | cut -c1-40)
-          echo "Fallback feature name: $FEATURE_NAME"
-          echo "feature_name=$FEATURE_NAME" >> $GITHUB_OUTPUT
-
-      - name: Set final feature name
-        id: final_feature_name
-        run: |
-          if [ -n "${{ steps.feature_name_generation.outputs.feature_name }}" ]; then
-            FEATURE_NAME="${{ steps.feature_name_generation.outputs.feature_name }}"
-          else
-            FEATURE_NAME="${{ steps.feature_name_fallback.outputs.feature_name }}"
-          fi
-          echo "Final feature name: $FEATURE_NAME"
-          echo "feature_name=$FEATURE_NAME" >> $GITHUB_OUTPUT
-
-      - name: Create feature directory
-        run: |
-          mkdir -p "docs/features/${{ steps.final_feature_name.outputs.feature_name }}"
-
-      - name: Create Copilot prompt file for feature summary
-        env:
-          ISSUE_TITLE: ${{ steps.issue.outputs.issue_title }}
-          ISSUE_BODY: ${{ steps.issue.outputs.issue_body }}
-          ISSUE_NUMBER: ${{ steps.issue.outputs.issue_number }}
-          FEATURE_NAME: ${{ steps.final_feature_name.outputs.feature_name }}
-        run: |
-          cat > /tmp/copilot_prompt.txt << 'PROMPT_EOF'
-          You are an expert software architect tasked with creating a comprehensive feature summary.
-          
-          CRITICAL INSTRUCTIONS:
-          1. Read and follow the feature-summary skill guidelines provided in the context
-          2. Create a detailed feature summary document based on those guidelines
-          3. The output MUST be saved to: docs/features/${FEATURE_NAME}/summary.md
-          
-          FEATURE INFORMATION:
-          
-          Title: ${ISSUE_TITLE}
-          
-          Description:
-          ${ISSUE_BODY}
-          
-          SOURCE: GitHub Issue #${ISSUE_NUMBER}
-          
-          Please create a comprehensive feature summary following the feature-summary skill guidelines.
-          PROMPT_EOF
-          
-          # Substitute environment variables into the file
-          envsubst < /tmp/copilot_prompt.txt > /tmp/copilot_prompt_final.txt
-          mv /tmp/copilot_prompt_final.txt /tmp/copilot_prompt.txt
-          
-          # Debug: Verify file was created
-          echo "=== Feature summary prompt file created ==="
-          ls -la /tmp/copilot_prompt.txt
-          echo "=== Content preview (first 30 lines) ==="
-          head -n 30 /tmp/copilot_prompt.txt
-
-      - name: Run Copilot feature-summary skill
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Run Copilot with the feature-summary skill
-          # We concatenate the skill definition and the prompt to provide full context
-          
-          copilot -p "$(cat .agents/skills/feature-summary/SKILL.md) $(cat /tmp/copilot_prompt.txt)" --silent --allow-all-tools
-        continue-on-error: true
-
-      - name: Alternative - Create feature summary manually
-        if: failure()
-        run: |
-          cat > "docs/features/${{ steps.final_feature_name.outputs.feature_name }}/summary.md" << 'EOF'
-          # Feature Summary: ${{ steps.issue.outputs.issue_title }}
-          
-          > **Source:** GitHub Issue [#${{ steps.issue.outputs.issue_number }}](https://github.com/${{ github.repository }}/issues/${{ steps.issue.outputs.issue_number }})
-          > **Status:** Accepted
-          > **Created:** $(date +%Y-%m-%d)
-          
-          ## Overview
-          
-          ${{ steps.issue.outputs.issue_body }}
-          
-          ## Current Status
-          
-          This feature has been accepted and is awaiting detailed planning and implementation.
-          
-          ## Next Steps
-          
-          1. Review and refine requirements
-          2. Create technical design document
-          3. Break down into implementation tasks
-          4. Assign to development sprint
-          
-          ---
-          
-          *This is an initial summary. A detailed feature specification will be created during the planning phase.*
-          EOF
-
-      - name: Check if files were created
-        id: check_files
-        run: |
-          if [ -f "docs/features/${{ steps.final_feature_name.outputs.feature_name }}/summary.md" ]; then
-            echo "summary_created=true" >> $GITHUB_OUTPUT
-            echo "✅ Feature summary created"
-          else
-            echo "summary_created=false" >> $GITHUB_OUTPUT
-            echo "❌ Feature summary not created"
-            exit 1
-          fi
-
-      - name: Configure Git
-        if: steps.check_files.outputs.summary_created == 'true'
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Commit and push feature summary
-        if: steps.check_files.outputs.summary_created == 'true'
-        run: |
-          git add "docs/features/${{ steps.final_feature_name.outputs.feature_name }}/"
-          git commit -m "feat: add feature summary for issue #${{ steps.issue.outputs.issue_number }}
-
-          Generated feature summary for: ${{ steps.issue.outputs.issue_title }}
-          
-          This summary was automatically generated when the feature was accepted.
-          
-          Related: #${{ steps.issue.outputs.issue_number }}"
-          
-          git push origin HEAD:feature-summary-${{ steps.issue.outputs.issue_number }}
-
-      - name: Create Pull Request
-        if: steps.check_files.outputs.summary_created == 'true'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const featureName = '${{ steps.final_feature_name.outputs.feature_name }}';
-            const issueNumber = '${{ steps.issue.outputs.issue_number }}';
-            const issueTitle = '${{ steps.issue.outputs.issue_title }}';
-            
-            const { data: pr } = await github.rest.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: `feat: Feature summary for #${issueNumber}`,
-              head: `feature-summary-${issueNumber}`,
-              base: 'main',
-              body: `## Feature Summary for Issue #${issueNumber}
-            
-            This PR adds the feature summary document for the accepted feature request.
-            
-            ### Summary
-            - **Feature:** ${issueTitle}
-            - **Feature Name:** \`${featureName}\`
-            - **Location:** \`docs/features/${featureName}/summary.md\`
-            - **Source Issue:** #${issueNumber}
-            
-            ### Files Added
-            - \`docs/features/${featureName}/summary.md\` - Comprehensive feature summary
-            
-            ### Next Steps
-            After this PR is merged:
-            1. Review the feature summary for completeness
-            2. Create a feature breakdown (use \`feature-breakdown\` skill)
-            3. Plan implementation timeline (use \`feature-planning\` skill)
-            
-            ---
-            
-            Closes #${issueNumber}
-            
-            **Auto-generated by Feature Summary Generator workflow**`
-            });
-            
-            // Add labels to the PR
-            await github.rest.issues.addLabels({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: pr.number,
-              labels: ['documentation', 'enhancement', 'automated']
-            });
-            
-            // Comment on the original issue
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: issueNumber,
-              body: `✅ **Feature summary has been generated!**
-            
-            A pull request has been created with the feature summary document: #${pr.number}
-            
-            📄 **Feature Name:** \`${featureName}\`
-            📄 **Document Location:** \`docs/features/${featureName}/summary.md\`
-            
-            ### Next Steps:
-            1. Review the generated summary in PR #${pr.number}
-            2. Merge the PR to include it in the repository
-            3. Use the \`feature-breakdown\` skill to decompose into tasks
-            4. Use the \`feature-planning\` skill to create implementation sequence
-            
-            The feature summary will help guide the implementation of this feature.`
-            });
-
-      - name: Handle failure
-        if: failure()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const featureName = '${{ steps.final_feature_name.outputs.feature_name }}';
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: `⚠️ **Feature summary generation failed**
-            
-            The automated feature summary generation encountered an error. 
-            
-            ### Manual Steps:
-            You can manually create the feature summary by:
-            
-            1. Clone the repository
-            2. Run Copilot with the feature-summary skill:
-               \`\`\`bash
-               copilot -p "Read .agents/skills/feature-summary/SKILL.md and create a feature summary for issue #${{ steps.issue.outputs.issue_number }}"
-               \`\`\`
-            
-            3. Or manually create the document at:
-               \`docs/features/${featureName}/summary.md\`
-            
-            Check the [workflow run logs](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) for details.`
-            });
+          # Use -p for prompt, -s for silent (output only the answer)
+          # Use --allow-all-tools if the prompt requires executing shell commands
+          copilot -sp "Summarize the changes in the current directory" --allow-all-tools
